make common module java7 compatible