@@ -19,7 +19,10 @@
 package co.elastic.apm.agent.common.util;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicReference;
@@ -34,7 +37,12 @@ class ProcessExecutionUtilTest {
     @Test
     void testQuietExecutionOfNonExistingCommand() {
         final AtomicReference<ProcessExecutionUtil.CommandOutput> cmdOutputRef = new AtomicReference<>();
-        assertDoesNotThrow(() -> cmdOutputRef.set(ProcessExecutionUtil.executeCommand(List.of("does", "not", "exist"))));
+        assertDoesNotThrow(new Executable() {
+            @Override
+            public void execute() throws Throwable {
+                cmdOutputRef.set(ProcessExecutionUtil.executeCommand(Arrays.asList("does", "not", "exist")));
+            }
+        });
         ProcessExecutionUtil.CommandOutput commandOutput = cmdOutputRef.get();
         assertThat(commandOutput.getExitCode()).isLessThan(0);
         assertThat(commandOutput.getExceptionThrown()).isNotNull();
@@ -47,9 +55,9 @@ class ProcessExecutionUtilTest {
             // other options: bash -c "sleep 0.2" (bash not guaranteed)
             // powershell -nop -c "& {sleep -m 2}" (too long to start)
             // timeout /NOBREAK /T 1 (output redirection fails)
-            cmd = List.of("ping", "192.0.2.1", "-n", "1", "-w", "200");
+            cmd = Arrays.asList("ping", "192.0.2.1", "-n", "1", "-w", "200");
         } else {
-            cmd = List.of("sleep", "0.2");
+            cmd = Arrays.asList("sleep", "0.2");
         }
         ProcessExecutionUtil.CommandOutput commandOutput = ProcessExecutionUtil.executeCommand(cmd, 100);
         System.out.println("commandOutput = " + commandOutput);
@@ -67,8 +75,8 @@ class ProcessExecutionUtilTest {
 
     @Test
     void cmdAsString() {
-        assertThat(ProcessExecutionUtil.cmdAsString(List.of())).isEqualTo("\"\"");
-        assertThat(ProcessExecutionUtil.cmdAsString(List.of("one"))).isEqualTo("\"one\"");
-        assertThat(ProcessExecutionUtil.cmdAsString(List.of("one", "two"))).isEqualTo("\"one two\"");
+        assertThat(ProcessExecutionUtil.cmdAsString(Collections.<String>emptyList())).isEqualTo("\"\"");
+        assertThat(ProcessExecutionUtil.cmdAsString(Arrays.asList("one"))).isEqualTo("\"one\"");
+        assertThat(ProcessExecutionUtil.cmdAsString(Arrays.asList("one", "two"))).isEqualTo("\"one two\"");
     }
 }
